--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 
 .main_block {
     width: 100%;
-    height: 717px;
+    height: 640px;
     background: url("../images/mainBG.png");
     background-size: cover;
     background-position: center;
@@ -212,7 +212,6 @@ body {
     margin-left: 80px;
     margin-right: 80px;
     margin-top: 30px;
-    /*    border: 1px solid red;*/
 
 }
 
@@ -228,7 +227,6 @@ body {
     flex-direction: column;
     justify-content: space-between;
     border-left: 3px solid #FFA1A1;
-    /*    border: 3px solid #FFA1A1;*/
 }
 
 .ourHistory_leftSide__block___topText,
@@ -327,10 +325,10 @@ body {
 }
 
 .outDirections_item__darkerBlock {
-    width: 470px;
-    height: 240px;
+    width: inherit;
+    height: inherit;
     background: rgba(131, 119, 72, 0.3);
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(2px);
 }
 
 .outDirections_item__moreInfoBlock{
@@ -478,7 +476,7 @@ body {
 .footer_allRight{
     font-weight: 300;
     font-size: 15px;
-    margin-top: -10px;
+    margin-top: -10px;    
 }
 
 .footer_line{
