--- a/css/media.css
+++ b/css/media.css
@@ -16,7 +16,7 @@
         font-size: 43px;
     }
 
-    .outDirections_title {
+    .ourDirections_title {
         font-size: 43px;
     }
 
@@ -24,35 +24,68 @@
 
 @media (max-width: 1230px) {
 
-    .outDirections_block {
-        height: 1270px;
+    .ourDirections_block {
+        height: 1370px;
+        background: url("../images/mainImg2-1.jfif");
+        background-position: right;
+        background-size: cover;
     }
 
-    .outDirections_mainBlock {
+    .ourDirections_mainBlock {
         flex-direction: column;
-        height: 1080px;
-        width: 600px;
+        height: 1150px;
+        width: 500px;
         margin-right: 0;
     }
 
-    .outDirections_mainBlock__leftSide,
-    .outDirections_mainBlock__rightSide {
-        height: 520px;
+    .ourDirections_mainBlock__leftSide,
+    .ourDirections_mainBlock__rightSide {
+        height: 555px;
     }
 
-    .outDirections_centreLine {
-        top: -15px;
-        left: 120%;
-        height: 1100px;
+    .ourDirections_item {
+        width: 500px;
+        height: 260px;
     }
 
-    .outDirections_item {
-        width: 600px;
+    .ourDirections_mainBlock__leftSide .ourDirections_item:first-child {
+        background: url("../images/courses.jfif");
+        background-position: left 10% bottom 30%;
+        background-size: cover;
+    }
+
+    .ourDirections_title {
+        width: 400px;
+        text-align: center;
+        font-size: 40px;
+        margin-right: 0;
+        margin-left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .ourDirections_mainBlock {
+        left: 50%;
+        transform: translateX(-50%);
+        margin-left: 0%;
+        margin-right: 0%;
     }
 
 }
 
 @media (max-width: 1080px) {
+
+    .portraitImg-header {
+        top: 20px;
+        height: 700px;
+    }
+
+    .main_text h1 {
+        font-size: 40px;
+    }
+
+    .main_text h2 {
+        font-size: 32px;
+    }
 
     .ourHistory_block {
         height: 750px;
@@ -74,6 +107,8 @@
         margin-left: 40px;
         margin-top: 65px;
     }
+
+
 
 }
 
@@ -123,12 +158,17 @@
         height: 15px;
     }
 
+    .portraitImg-header {
+        top: 20px;
+        height: 600px;
+    }
+
     .main_text h1 {
-        font-size: 37px;
+        font-size: 35px;
     }
 
     .main_text h2 {
-        font-size: 27px;
+        font-size: 25px;
     }
 
     .ourHistory_textBlock {
@@ -151,24 +191,21 @@
         font-size: 40px;
         margin-left: 80px;
     }
+}
 
-    .outDirections_title {
-        width: 600px;
-        font-size: 40px;
-        margin-right: 0;
-        margin-left: 50%;
-        transform: translateX(-50%);
+@media (max-width: 820px) {
+
+    .portraitImg-header {
+        top: 20px;
+        height: 530px;
     }
 
-    .outDirections_mainBlock {
-        left: 50%;
-        transform: translateX(-50%);
-        margin-left: 0%;
-        margin-right: 0%;
+    .main_text h1 {
+        font-size: 31px;
     }
 
-    .outDirections_centreLine {
-        display: none;
+    .main_text h2 {
+        font-size: 21px;
     }
 
 }
@@ -187,13 +224,45 @@
         font-size: 15px;
     }
 
-    .ourHistory_image {
-        position: absolute;
-        width: 420px;
-        height: 420px;
-        right: 0;
-        bottom: -50px;
-        opacity: .6;
+    .main_block {
+        height: 450px;
+    }
+
+    .portraitImg-header {
+        top: 20px;
+        height: 450px;
+    }
+
+    .main_text {
+        margin-top: 120px;
+    }
+
+    .main_text h1 {
+        font-size: 28px;
+    }
+
+    .main_text h2 {
+        font-size: 18px;
+    }
+
+    .menu_burger {
+        width: 230px;
+        height: 270px;
+    }
+
+    .menu_burger a li {
+        width: 200px;
+        margin-top: 15px;
+    }
+
+    .menu_burger a li p {
+        font-size: 12px;
+    }
+
+    .menu_burger a li img {
+        width: 21px;
+        height: 21px;
+        margin-left: 30px;
     }
 
 }
@@ -205,14 +274,26 @@
         margin: 0% 5%;
     }
 
+    .main_block {
+        height: 450px;
+    }
+
+    .portraitImg-header {
+        top: 50px;
+        height: 420px;
+    }
+
+    .main_text {
+        margin-top: 110px;
+    }
+
     .main_text h1 {
-        font-size: 30px;
-        padding: 0px 20px;
+        width: 260px;
+        font-size: 28px;
     }
 
     .main_text h2 {
-        font-size: 20px;
-        padding: 0px 20px;
+        font-size: 18px;
     }
 
     .ourHistory_block {
@@ -232,7 +313,7 @@
 
     .ourHistory_leftSide__block {
         height: 240px;
-        border-left: 2px solid #FFA1A1;
+        border-left: 2px solid rgba(238, 200, 0, 1);
         padding-left: 30px;
     }
 
@@ -242,11 +323,11 @@
         font-size: 14px;
     }
 
-    .outDirections_mainBlock {
+    .ourDirections_mainBlock {
         width: 480px;
     }
 
-    .outDirections_item {
+    .ourDirections_item {
         width: 480px;
     }
 
@@ -255,7 +336,7 @@
         margin-left: 80px;
     }
 
-    .outDirections_title {
+    .ourDirections_title {
         width: 480px;
         font-size: 38px;
     }
@@ -263,6 +344,28 @@
 }
 
 @media (max-width: 540px) {
+
+    .main_block {
+        height: 380px;
+    }
+
+    .portraitImg-header {
+        top: 50px;
+        height: 350px;
+    }
+
+    .main_text {
+        margin-top: 80px;
+    }
+
+    .main_text h1 {
+        width: 260px;
+        font-size: 23px;
+    }
+
+    .main_text h2 {
+        font-size: 13px;
+    }
 
     .ourHistory_block {
         height: 640px;
@@ -275,7 +378,7 @@
 
     .ourHistory_leftSide__block {
         height: 240px;
-        border-left: 2px solid #FFA1A1;
+        border-left: 2px solid rgba(238, 200, 0, 1);
         padding-left: 20px;
         padding: 20px 0px 20px 20px;
     }
@@ -292,69 +395,113 @@
         font-size: 13px;
     }
 
-    .outDirections_mainBlock {
+    .ourDirections_mainBlock {
         width: 380px;
     }
 
-    .outDirections_item {
+    .ourDirections_item {
         width: 380px;
     }
 
-    .outDirections_title {
+    .ourDirections_title {
         width: 380px;
         font-size: 34px;
     }
 
-    .outDirections_item__bottomSection p {
+    .ourDirections_item__bottomSection p {
         font-size: 16px;
     }
 
-    .outDirections_item__btnMore {
+    .ourDirections_item__btnMore {
         width: 130px;
         font-size: 13px;
     }
 
-    .outDirections_item__moreInfoBlock > h3 {
+    .ourDirections_item__moreInfoBlock > h3 {
         margin-left: 20px;
         font-size: 17px;
     }
 
-    .outDirections_item__moreInfoBlock > p {
+    .ourDirections_item__moreInfoBlock > p {
         width: 320px;
         font-size: 14px;
         margin-bottom: 5px;
         margin-left: 20px;
     }
 
-    .outDirections_item__moreInfoBlock div {
+    .ourDirections_item__moreInfoBlock div {
         width: 150px;
     }
 
-    .outDirections_item__moreInfoBlock div h3:nth-child(1) {
+    .ourDirections_item__moreInfoBlock div h3:nth-child(1) {
         font-size: 17px;
     }
 
-    .outDirections_item__moreInfoBlock div h3:nth-child(2) {
+    .ourDirections_item__moreInfoBlock div h3:nth-child(2) {
         font-size: 17px;
     }
 
 }
 
 @media (max-width: 460px) {
-    
+
+    .main_block {
+        height: 380px;
+    }
+
+    .portraitImg-header {
+        top: 70px;
+        left: -15px;
+        height: 320px;
+    }
+
+    .main_text {
+        margin-top: 80px;
+    }
+
+    .main_text h1 {
+        width: 220px;
+        font-size: 18px;
+    }
+
+    .main_text h2 {
+        font-size: 12px;
+    }
+
+    .menu_burger {
+        width: 190px;
+        height: 215px;
+    }
+
+    .menu_burger a li {
+        width: 160px;
+        margin-top: 9px;
+    }
+
+    .menu_burger a li p {
+        font-size: 11px;
+    }
+
+    .menu_burger a li img {
+        width: 17px;
+        height: 17px;
+        margin-left: 20px;
+    }
+
+
     .ourHistory_leftSide__block___topText,
     .ourHistory_leftSide__block___bottomText {
         width: 250px;
         font-size: 11px;
     }
-    
+
     .ourHistory_leftSide__block {
         height: 240px;
-        border-left: 2px solid #FFA1A1;
+        border-left: 2px solid rgba(238, 200, 0, 1);
         padding-left: 20px;
         padding: 20px 0px 20px 10px;
     }
-    
+
     .ourHistory_textBlock {
         margin-left: 10px;
         margin-right: 0;
@@ -372,81 +519,61 @@
         margin-left: 20px;
         margin-top: 30px;
     }
-    
-    .outDirections_title {
+
+    .ourDirections_title {
         width: 380px;
         font-size: 31px;
     }
 
-     .ourHistory_image {
-        width: 300px;
-        height: 300px;
-    }
-    
-    
-    
-    .outDirections_mainBlock {
+    .ourDirections_mainBlock {
         width: 310px;
     }
 
-    .outDirections_item {
+    .ourDirections_item {
         width: 310px;
     }
 
-    .outDirections_title {
+    .ourDirections_title {
         width: 310px;
         font-size: 31px;
     }
-
-    .outDirections_item__bottomSection p {
-        font-size: 15px;
+    
+    .ourDirections_mainBlock__leftSide .ourDirections_item:first-child {
+        background-position: center top;
     }
 
-    .outDirections_item__btnMore {
-        width: 120px;
-        font-size: 12px;
+    .ourDirections_item__bottomSection p {
+        font-size: 13px;
     }
 
-    .outDirections_item__moreInfoBlock > h3 {
+    .ourDirections_item__btnMore {
+        width: 110px;
+        font-size: 11px;
+    }
+
+    .ourDirections_item__moreInfoBlock > h3 {
         margin-left: 20px;
         font-size: 16px;
     }
 
-    .outDirections_item__moreInfoBlock > p {
+    .ourDirections_item__moreInfoBlock > p {
         width: 280px;
         font-size: 12px;
         margin-bottom: 5px;
         margin-left: 20px;
     }
 
-    .outDirections_item__moreInfoBlock div {
+    .ourDirections_item__moreInfoBlock div {
         width: 140px;
     }
 
-    .outDirections_item__moreInfoBlock div h3:nth-child(1) {
+    .ourDirections_item__moreInfoBlock div h3:nth-child(1) {
         font-size: 16px;
     }
 
-    .outDirections_item__moreInfoBlock div h3:nth-child(2) {
+    .ourDirections_item__moreInfoBlock div h3:nth-child(2) {
         font-size: 16px;
     }
-    
-    
+
+
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
