--- a/css/media.css
+++ b/css/media.css
@@ -395,6 +395,13 @@
         font-size: 13px;
     }
 
+    .ourDirections_block {
+        height: 1370px;
+        background: url("../images/mainImg2-1.jfif");
+        background-position: center;
+        background-size: cover;
+    }
+    
     .ourDirections_mainBlock {
         width: 380px;
     }
